--- a/platformio.ini
+++ b/platformio.ini
@@ -16,3 +16,4 @@ build_cache_dir = .cache
 platform = ststm32
 board = nucleo_f303k8
 framework = mbed
+platform_packages = framework-mbed @ https://github.com/Pylgos/mbed-os.git
